# winter-arc

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml
data/: registros.csv  users.csv  weight_records.csv
pages/: 1_daily_tracker.py  2_weekly_stats.py  3_rankings.py  daily_tracker.py  ranking.py  weight_tracker.py
scripts/: init_db.py
tests/: test_database.py
utils/: data_manager.py  database.py  settings.py  user_manager.py  weight_manager.py
winter/: settings.py
winter/modules/: database.py
winter/scripts/: add_user.py  init_db.py
