[tool.poetry]
name = "winter-arc"
version = "0.1.0"
description = ""
authors = ["rafgonlop1 <rafaelbenzal96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.24.0"
pandas = "^2.0.3"
plotly = "^5.15.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
